# pyfreshintellivent

./: LICENSE  README.md  characteristics.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  linting.yml  tests.yml
docs/: api.md
examples/: find_device.py  get_authcode.py  read.py  scanner.py  sky-auth-ex.py  sky-get-info-ex.py  sky-set-boost-2min.py  sky-set-boost-off.py
pyfreshintellivent/: FreshIntellivent.py  SkyModeParser.py  __init__.py  characteristics.py  consts.py  device.py  helpers.py  models.py  parser.py  scanner.py  sensors.py  skyModeParser.py  skySensors.py
pyfreshintellivent/examples/: read.py
pyfreshintellivent/models/: __init__.py  device_info.py  modes.py  sensor_data.py
pyfreshsky/: FreshIntellivent.py  FreshSky.py  __init__.py  helpers.py
tests/: test_airing.py  test_bleak_connection.py  test_boost.py  test_constant_speed.py  test_device.py  test_helpers.py  test_models.py  test_parser.py  test_parser_detection_as_string.py  test_parser_humidity.py  test_parser_light_and_voc.py  test_pause.py  test_sensor_data.py  test_sky_sensors.py  test_timer.py
