[project]
name = "pyfreshintellivent"
version = "0.3.3"
description = "Manage Fresh Intellivent Sky bathroom ventilation fan"
authors = [
    {name = "Ståle Storø Hauknes", email = "walnut-caprice.04@icloud.com"},
]
readme = "README.md"
license = "Apache License 2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["ble", "ventilation", "fresh", "intellivent", "sky"]
include = [
    "characteristics.md", "README.md"
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "bleak>=0.22.3",
    "bleak-retry-connector>=3.9.0,<4.0.0",
]

[project.urls]
repository = "https://github.com/LaStrada/pyfreshintellivent"

[tool.poetry.group.dev.dependencies]
black = ">=22.10.0"
flake8 = ">=7.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
