[project]
name = "pyfreshintellivent"
version = "0.3.4"
description = "Manage Fresh Intellivent Sky bathroom ventilation fan"
authors = [
    {name = "Ståle Storø Hauknes", email = "walnut-caprice.04@icloud.com"},
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["ble", "ventilation", "fresh", "intellivent", "sky"]
requires-python = ">=3.12"
dependencies = [
    "bleak>=1.0.0",
    "bleak-retry-connector>=4.4.3",
    "async-interrupt>=1.2.2",
]

[project.urls]
repository = "https://github.com/LaStrada/pyfreshintellivent"

[tool.poetry]
include = ["characteristics.md"]

[tool.poetry.group.dev.dependencies]
black = ">=25.9.0"
isort = "^7.0.0"
ruff = ">=0.14.3"
mypy = "^1.18.2"
pylint = "^4.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
pytest-rerunfailures = "^16.1.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=pyfreshintellivent --cov-report=term-missing:skip-covered"
pythonpath = ["pyfreshintellivent"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    "tests/.*",
    "examples/.*",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["docs", "build"]
src = ["pyfreshintellivent", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
